tests/machine/x/pascal/user_type_literal.error
fpc error: exit status 1
Free Pascal Compiler version 3.2.2+dfsg-32 [2024/01/05] for x86_64
Copyright (c) 1993-2021 by Florian Klaempfl and others
Target OS: Linux for x86-64
Compiling /workspace/mochi/tests/machine/x/pascal/user_type_literal.pas
user_type_literal.pas(22,7) Error: Duplicate identifier "Book"
user_type_literal.pas(22,13) Error: Error in type definition
user_type_literal.pas(30,16) Error: Illegal qualifier
user_type_literal.pas(32) Fatal: There were 3 errors compiling module, stopping
Fatal: Compilation aborted
Error: /usr/bin/ppcx64 returned an error exitcode
